Header: facto + set font + set position fixed

--- a/src/containers/Header/index.less
+++ b/src/containers/Header/index.less
@@ -1,4 +1,8 @@
-.root {
+.header {
+  position: fixed;
+  font-family: 'Roboto Mono';
+  width: 100%;
+  color: #07054e;
   box-shadow: 0px 3px 6px #00000029;
   opacity: 1;
   z-index: 1;
@@ -7,17 +11,14 @@
 .title {
   width: 324px;
   text-align: left;
-  font: normal normal bold 20px/27px PT Sans Caption;
+  font-size: 20px;
   letter-spacing: 0px;
-  color: #07054e;
   opacity: 1;
 }
 
 .btn {
-  text-align: left;
-  font: normal normal bold 20px/27px PT Sans Caption;
+  font-size: 20px;
   letter-spacing: 0px;
-  color: #07054e;
   opacity: 1;
 }
 
@@ -28,5 +29,5 @@
 
 .account-text {
   margin-left: 15px;
-  font: normal 16px Hiragino Sans;
+  font-size: 16px;
 }
