set overflow-x hidden

--- a/src/containers/App.less
+++ b/src/containers/App.less
@@ -1,11 +1,10 @@
-.layout {
-  height: 100vh;
+html body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
-.site-layout-content {
-  min-height: 280px;
-  padding: 24px;
-  background: #fff;
+.layout {
+  height: 100vh;
 }
 
 [data-theme='dark'] .site-layout-content {
