--- a/src/containers/Header/index.less
+++ b/src/containers/Header/index.less
@@ -1,33 +1,28 @@
 .header {
-  position: fixed;
-  font-family: 'Roboto Mono';
-  width: 100%;
+  min-height: 100%;
+  padding: 24px;
+  background: #fff;
+}
+
+.welcome-container {
+  margin-top: 22em;
+  margin-left: 10em;
+  opacity: 1;
   color: #07054e;
-  box-shadow: 0px 3px 6px #00000029;
+  font-family: 'Roboto Mono';
+}
+
+.welcome-title {
+  font-size: 50px;
+}
+
+.welcome-text {
+  font-size: 30px;
+}
+
+.img-grid {
+  position: absolute;
+  top: -453px;
+  left: 801px;
   opacity: 1;
-  z-index: 1;
-}
-
-.title {
-  width: 324px;
-  text-align: left;
-  font-size: 20px;
-  letter-spacing: 0px;
-  opacity: 1;
-}
-
-.btn {
-  font-size: 20px;
-  letter-spacing: 0px;
-  opacity: 1;
-}
-
-.right-items {
-  float: right;
-  margin: 0px 10px;
-}
-
-.account-text {
-  margin-left: 15px;
-  font-size: 16px;
 }
