add Content section

--- a/src/containers/App.less
+++ b/src/containers/App.less
@@ -5,8 +5,5 @@ html body {
 
 .layout {
   height: 100vh;
-}
-
-[data-theme='dark'] .site-layout-content {
-  background: #141414;
+  font-family: 'Roboto Mono';
 }
