--- a/src/containers/TopBar/index.less
+++ b/src/containers/TopBar/index.less
@@ -8,25 +8,25 @@
 }
 
 .title {
-  width: 324px;
+  width: 17em;
   text-align: left;
-  font-size: 20px;
-  letter-spacing: 0px;
+  font-size: 1.43em;
+  letter-spacing: 0;
   opacity: 1;
 }
 
 .btn {
-  font-size: 20px;
-  letter-spacing: 0px;
+  font-size: 1.43em;
+  letter-spacing: 0;
   opacity: 1;
 }
 
 .right-items {
   float: right;
-  margin: 0px 10px;
+  margin: 0 0.7em;
 }
 
 .account-text {
-  margin-left: 15px;
-  font-size: 16px;
+  margin-left: 0.9em;
+  font-size: 1.15em;
 }
